# jip2location

./: .project  Make.def.in  Make.rules  Makefile  build.xml  configure.ac  template.ant.sh
src/com/ip2location/: IP2Location.java  IP2LocationRecord.java  Makefile  com_ip2location_IP2Location.c
